# intellitrix

./: README.md  pyproject.toml
src/intellitrix/: main.py
